[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/drawable/black_ant/thorax.png" type="Texture" id=1]
[ext_resource path="res://resources/drawable/black_ant/leg_upper.png" type="Texture" id=2]
[ext_resource path="res://resources/drawable/black_ant/leg_lower.png" type="Texture" id=3]
[ext_resource path="res://resources/drawable/black_ant/foot.png" type="Texture" id=4]
[ext_resource path="res://resources/drawable/black_ant/abdomen.png" type="Texture" id=5]
[ext_resource path="res://Entities/BugOfWar/AntIK.gd" type="Script" id=6]

[node name="AntIK" type="Node2D"]
scale = Vector2( 0.05, 0.05 )
script = ExtResource( 6 )

[node name="Skeleton" type="Skeleton2D" parent="."]

[node name="LegUpperR3" type="Bone2D" parent="Skeleton"]
position = Vector2( 120, 260 )
rotation = 0.0262094
rest = Transform2D( 0.949235, 0.314567, -0.314567, 0.949235, 120, 260 )
default_length = 250.0
__meta__ = {
"_edit_bone_": true,
"_edit_ik_": true
}

[node name="LegUpper" type="Sprite" parent="Skeleton/LegUpperR3"]
position = Vector2( 180, 60 )
rotation = 1.847
texture = ExtResource( 2 )

[node name="LegLower" type="Bone2D" parent="Skeleton/LegUpperR3"]
position = Vector2( 380, 120 )
rotation = 0.363467
rest = Transform2D( 0.951901, -0.306404, 0.306404, 0.951901, 380, 120 )
__meta__ = {
"_edit_bone_": true
}

[node name="LegLower" type="Sprite" parent="Skeleton/LegUpperR3/LegLower"]
position = Vector2( 3.05176e-05, 100 )
texture = ExtResource( 3 )

[node name="Foot" type="Bone2D" parent="Skeleton/LegUpperR3/LegLower"]
position = Vector2( 20, 200 )
rotation = 0.975461
rest = Transform2D( 0.212608, 0.977138, -0.977138, 0.212608, 20, 200 )
default_length = 250.0
__meta__ = {
"_edit_bone_": true,
"_edit_ik_": true
}

[node name="Foot" type="Sprite" parent="Skeleton/LegUpperR3/LegLower/Foot"]
position = Vector2( 56.5833, -44.7027 )
rotation = -1.25664
texture = ExtResource( 4 )

[node name="LegUpperR2" type="Bone2D" parent="Skeleton"]
position = Vector2( 140, 160 )
rotation = -0.197136
rest = Transform2D( 0.980631, -0.195862, 0.195862, 0.980631, 140, 160 )
default_length = 250.0
__meta__ = {
"_edit_bone_": true,
"_edit_ik_": true
}

[node name="LegUpper" type="Sprite" parent="Skeleton/LegUpperR2"]
position = Vector2( 180, 60 )
rotation = 1.847
texture = ExtResource( 2 )

[node name="LegLower" type="Bone2D" parent="Skeleton/LegUpperR2"]
position = Vector2( 380, 120 )
rotation = 0.277206
rest = Transform2D( 0.961824, 0.273669, -0.273669, 0.961824, 380, 120 )
__meta__ = {
"_edit_bone_": true
}

[node name="LegLower" type="Sprite" parent="Skeleton/LegUpperR2/LegLower"]
position = Vector2( 3.05176e-05, 100 )
texture = ExtResource( 3 )

[node name="Foot" type="Bone2D" parent="Skeleton/LegUpperR2/LegLower"]
position = Vector2( 20, 200 )
rotation = 1.17657
rest = Transform2D( 0.384096, 0.923293, -0.923293, 0.384096, 20, 200 )
default_length = 250.0
__meta__ = {
"_edit_bone_": true,
"_edit_ik_": true
}

[node name="Foot" type="Sprite" parent="Skeleton/LegUpperR2/LegLower/Foot"]
position = Vector2( 56.5833, -44.7027 )
rotation = -1.25664
texture = ExtResource( 4 )

[node name="LegUpperR1" type="Bone2D" parent="Skeleton"]
position = Vector2( 140, -40 )
rotation = -0.794842
rest = Transform2D( 0.700397, -0.713753, 0.713753, 0.700397, 140, -40 )
default_length = 250.0
__meta__ = {
"_edit_bone_": true,
"_edit_ik_": true
}

[node name="LegUpper" type="Sprite" parent="Skeleton/LegUpperR1"]
position = Vector2( 180, 60 )
rotation = 1.847
texture = ExtResource( 2 )

[node name="LegLower" type="Bone2D" parent="Skeleton/LegUpperR1"]
position = Vector2( 380, 120 )
rotation = 0.854959
rest = Transform2D( 0.65625, 0.754544, -0.754544, 0.65625, 380, 120 )
__meta__ = {
"_edit_bone_": true
}

[node name="LegLower" type="Sprite" parent="Skeleton/LegUpperR1/LegLower"]
position = Vector2( 3.05176e-05, 100 )
texture = ExtResource( 3 )

[node name="Foot" type="Bone2D" parent="Skeleton/LegUpperR1/LegLower"]
position = Vector2( 20, 200 )
rotation = 1.19652
rest = Transform2D( 0.365599, 0.930772, -0.930772, 0.365599, 20, 200 )
default_length = 250.0
__meta__ = {
"_edit_bone_": true,
"_edit_ik_": true
}

[node name="Foot" type="Sprite" parent="Skeleton/LegUpperR1/LegLower/Foot"]
position = Vector2( 56.5833, -44.7027 )
rotation = -1.25664
texture = ExtResource( 4 )

[node name="Thorax" type="Sprite" parent="Skeleton"]
texture = ExtResource( 1 )

[node name="Abdomen" type="Sprite" parent="Skeleton"]
position = Vector2( 20, 660 )
texture = ExtResource( 5 )

[node name="LegUpper" type="Sprite" parent="Skeleton"]
position = Vector2( -300, 360 )
rotation = -2.06183
scale = Vector2( -1, 1 )
texture = ExtResource( 2 )

[node name="LegLower" type="Sprite" parent="Skeleton"]
position = Vector2( 3.05176e-05, 100 )
texture = ExtResource( 3 )

[node name="Foot" type="Sprite" parent="Skeleton"]
position = Vector2( 56.5833, -44.7027 )
rotation = -1.25664
texture = ExtResource( 4 )

[node name="LegR1Target" type="Node2D" parent="."]
position = Vector2( 440, 580 )
